--- a/Form1.resx
+++ b/Form1.resx
@@ -117,6 +117,84 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="rtbLogHome.Text" xml:space="preserve">
+    <value>Version 0.1 (16/05/2020)
+
+First documented update,
+
+Mostly finished sections:
+	Windows Update:
+		Enable/Disable Update
+		Enable/Disable Auto Driver DL
+		Enable/Disable Auto Adjust Hours
+		Enable/Disable Auto Maintinance
+	Search/Cortana/Spotlight:
+		Enable/Disable Search
+		Enable/Disable Searching Online
+		Enable/Disable Immersive Search
+		Enable/Disable Cortana
+		Enable/Disable Spotlight, Facts and Wallpapers
+		Backup Wallpapers to Pictures
+	Telemetry and Data Sharing:
+		Enable/Disable Telemetry
+		Enable/Disable Connected User Experience
+		Remove Telemetry Scheduled Tasks
+	Security And Defender:
+		Enable/Disable Defender
+		Enable/Disable Real-Time Protection
+		Enable/Disable PUP Protection
+		Enable/Disable Net Scanning
+		Enable/Disable Find My Device
+		Show/Hide Firewall Menu
+		Show/Hide Performance Menu
+	Explorer Options:
+		Transparency (And OLED Transparency)
+		Thumbnails
+		Blurry Apps
+		Build Number on Desktop
+		Shortcut name extention
+		'Old' Style Volume
+		Auto Hiding Scrollbar
+		ResetDPI
+		(Context Menu) Take Ownership
+		(Context Menu) Unblock File
+		(Context Menu) Classic Personalisation
+		(Context Menu) Install CAB
+		(Context Menu) Kill Not Responding
+		(Context Menu) Defender
+		(Context Menu) Disc Burn
+		(Context Menu) SFC Checker
+		(Context Menu) Delete Folder Contents
+		(Context Menu) Wide Context Menu
+		(SettingsMisc) Reset Folder Views and Shell Folders
+		(Settings Misc) Enable Administrator Account
+		(SettingsMisc) Developer Mode
+
+Added Info and warnings
+Synced with GitHub along with Batch files
+Compiled 'Debug' version in .\bin</value>
+  </data>
+  <data name="rtbAboutHome.Text" xml:space="preserve">
+    <value>Welcome to my Windows 10 Toolbox!
+
+Here you will be able to modify various aspects of Windows
+and may of its Services, Features and many more!
+
+This is uploaded as a TEST version. I have tried to make all options show
+a Command Prompt window with what is being executed and a pause. 
+this is so I and any others can see if there are any errors. This is my FIRST
+Visual C# Application and coding so the code will simple to start and all
+commands are stored in *.bat files in the .\assets folder.
+
+###Please Note:###
+By using this software you understand that there will always be a risk when
+modifying options and features that are not normally available to the average user.
+Please make a System Restore Point before continuing..
+
+I will add Back Up features after the basis of everything is finished..
+
+Thank you for any interest anyone shows!</value>
+  </data>
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>132, 17</value>
   </metadata>
